Fix an error with the background gradient jumping after hovering over a card

--- a/components/elements/Card/Card.module.scss
+++ b/components/elements/Card/Card.module.scss
@@ -43,7 +43,7 @@
 
 .cardFront {
   background-image: linear-gradient(
-    var(--background-gradient-angle-reversed),
+    var(--background-gradient-angle-180),
     var(--background-gradient)
   );
 }
